--- a/suHero/package.json
+++ b/suHero/package.json
@@ -12,6 +12,8 @@
     "react-native-axios": "^0.17.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-image-progress": "^1.1.1",
+    "react-native-progress": "^3.6.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0"
   },
