--- a/suHero/ios/SHero/Info.plist
+++ b/suHero/ios/SHero/Info.plist
@@ -70,6 +70,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>HeroesLegend.ttf</string>
+		<string>HeroesLegendHollow.ttf</string>
 	</array>
 </dict>
 </plist>
