--- a/suHero/ios/SHero/Info.plist
+++ b/suHero/ios/SHero/Info.plist
@@ -25,7 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -71,7 +71,6 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>HeroesLegend.ttf</string>
-		<string>HeroesLegendHollow.ttf</string>
 	</array>
 </dict>
 </plist>
