--- a/suHero/package.json
+++ b/suHero/package.json
@@ -7,9 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
-    "react-native-axios": "^0.17.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-image-progress": "^1.1.1",
